--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "reactexpenseapp",
   "version": "0.1.0",
   "private": true,
+  "author": "Dipjyoti Metia",
+  "description": "Expense tracking app using react",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
