--- a/package.json
+++ b/package.json
@@ -5,15 +5,102 @@
   "author": "Dipjyoti Metia",
   "description": "Expense tracking app using react",
   "dependencies": {
+    "@babel/polyfill": "7.4.3",
+    "bootstrap": "^4.3.1",
+    "chalk": "2.4.2",
+    "compression": "1.7.4",
+    "lodash": "4.17.11",
+    "minimist": "1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "7.1.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "react-toastify": "^5.1.1",
+    "redux": "4.0.1",
+    "redux-saga": "1.0.5",
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0",
+    "immer": "3.1.3",
+    "styled-components": "4.3.2",
+    "prop-types": "^15.7.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "babel-preset-react-app": "7.0.2",
+    "autoprefixer": "^9.5.1",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "dotenv-webpack": "^1.7.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-redux-saga": "1.0.0",
+    "eslint-plugin-react-hooks": "1.6.1",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^2.1.0",
+    "jest": "^24.7.1",
+    "lint-staged": "^8.1.5",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.1",
+    "prettier": "^1.17.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylelint": "10.1.0",
+    "stylelint-config-recommended": "2.2.0",
+    "stylelint-config-styled-components": "0.1.1",
+    "stylelint-processor-styled-components": "1.8.0",
+    "svg-url-loader": "3.0.0",
+    "url-loader": "2.0.1",
+    "terser-webpack-plugin": "^1.2.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "3.1.0",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.2.1",
+    "cross-env": "^5.2.0",
+    "json-server": "^0.15.0",
+    "npm-run-all": "^4.1.5",
+    "ngrok": "3.2.1",
+    "react-test-renderer": "16.8.6",
+    "react-testing-library": "8.0.1",
+    "rimraf": "2.6.3",
+    "redux-immutable-state-invariant": "2.1.0",
+    "redux-mock-store": "1.5.3",
+    "fetch-mock": "7.3.3",
+    "node-fetch": "2.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack-dev-server --config webpack.config.dev.js --port 3000",
+    "webpack:build": "webpack --config webpack.config.prod.js",
+    "mock:start": "run-p start:dev start:api",
+    "start:dev": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
+    "prestart:api": "node tools/createMockDb.js",
+    "start:api": "node tools/apiServer.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "jest --watch",
+    "test:coverage": "jest --coverage --colors",
+    "eject": "react-scripts eject",
+    "lint": "eslint --cache --format codeframe --ext js,jsx src",
+    "lint:fix": "eslint --cache --format codeframe --ext js,jsx src --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,6 +115,16 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "yarn lint"
     ]
   }
 }
